tests/parsing/smtlib/v2.6/errors/097_get-proof_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/097_get-proof_unclosed_1.smt2", line 2, character 11-12:
2 | (get-proof _)
               ^
Error while parsing a get-proof command, read the reserved word '_',
      but expected a closing parenthesis.
